0.12.1 unreleased

    - Do not remove square brackets from atom if its normal valence is
      ambiguous.
    - Fix a bug in handling of disconnected molecular entities in
      parentheses.
    - Warn about 2 aromatic atoms in a cycle not having an aromatic bond
      between them.

0.12.0 2025-04-25

    - Ceasing to output aromatic bonds, excess parentheses and explicit
      hydrogen atoms by default. These features can be re-enabled by
      writer options.
    - Reusing ring bond numbers immediately after their closure. The
      old behavior can be brought back via an option.

0.11.6 2025-02-14

    - Restoring incompatibility with Perl Graph package versions before
      v0.9727 which have a bug in bridges().
    - Limiting the set of allowed aromatic elements.

0.11.5 2025-02-13

    - Fixing a bug failing to recognise @TB10.
    - Forbidding unknown chemical elements.
    - Forbidding ring bonds to self.
    - Accepting order subroutine in kekulise() in order to make the
      algorithm stable.
    - Supporting octahedral chirality in chirality_to_pseudograph().
    - Introducing Chemistry::OpenSMILES::is_aromatic_bond().
    - Reporting aromatic bonds outside aromatic rings in _validate().

0.11.4 2025-02-04

    - Reducing false-positive cis/trans conflicts detected in _validate().
    - Fixing a bug causing allene systems to be validated more times than
      needed in _validate().

0.11.3 2025-02-03

    - Respecting and validating allene systems in _validate().
    - Better validation of cis/trans and chirality settings in _validate().

0.11.2 2025-01-16

    - Fixing nondeterminism in relative cis/trans marker placement.

0.11.1 2025-01-14

    - Recognising unimportant anomer chiral centers.

0.11.0 2025-01-06

    - Fixing handling of octahedral chirality.
    - Implementing an alternative method to mark cis/trans settings by
      giving their list instead of providing a callback.

0.10.0 2024-11-28
