@@ -6,6 +6,7 @@
       parentheses.
     - Warn about 2 aromatic atoms in a cycle not having an aromatic bond
       between them.
+    - Warn about aromatic atoms with less than 2 aromatic bonds.
 
 0.12.0 2025-04-25
 
